--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -66,11 +66,6 @@
         <!--
           The server id here defined must also appear in ~/.m2/settings.xml with username
         -->
-        <site>
-            <id>mbus4j.sf.net</id>
-            <name>MBus4J Site</name>
-            <url>scp://shell.sourceforge.net/home/project-web/mbus4j/htdocs</url>
-        </site>
         <snapshotRepository>
             <id>sonatype-nexus-snapshots</id>
             <name>Sonatype Nexus Snapshots</name>
@@ -129,14 +124,6 @@
 
 
     <build>
-        <extensions>
-            <!-- Enabling the use of FTP -->
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ssh</artifactId>
-                <version>2.10</version>
-            </extension>
-        </extensions>
         
         <pluginManagement>
             <plugins>
@@ -151,7 +138,16 @@
                         <encoding>${sourceEncoding}</encoding>
                     </configuration>
                 </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.4</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+            </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
