--- a/mbus4j-master/pom.xml
+++ b/mbus4j-master/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>net.sf.mbus4j</groupId>
         <artifactId>mbus4j</artifactId>
-        <version>1.0.0</version>
+        <version>0.1.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>mbus4j-master</artifactId>
@@ -24,12 +24,12 @@
         <dependency>
             <groupId>net.sf.mbus4j</groupId>
             <artifactId>mbus4j-core</artifactId>
-            <version>1.0.0</version>
+            <version>0.1.6-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>net.sf.mbus4j</groupId>
             <artifactId>mbus4j-core</artifactId>
-            <version>1.0.0</version>
+            <version>0.1.6-SNAPSHOT</version>
             <scope>test</scope>
             <classifier>tests</classifier>
         </dependency>
