--- a/mbus4j-master-ui/pom.xml
+++ b/mbus4j-master-ui/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <groupId>net.sf.mbus4j</groupId>
         <artifactId>mbus4j</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>net.sf.mbus4j</groupId>
     <artifactId>mbus4j-master-ui</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>mbus4j-master-ui</name>
 
     <dependencies>
@@ -30,12 +30,12 @@
         <dependency>
             <groupId>net.sf.mbus4j</groupId>
             <artifactId>mbus4j-core</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>net.sf.mbus4j</groupId>
             <artifactId>mbus4j-master</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>net.sf.atmodem4j</groupId>
