--- a/mbus4j-master-ui/pom.xml
+++ b/mbus4j-master-ui/pom.xml
@@ -7,10 +7,8 @@
         <version>1.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>net.sf.mbus4j</groupId>
     <artifactId>mbus4j-master-ui</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.1-SNAPSHOT</version>
     <name>mbus4j-master-ui</name>
 
     <dependencies>
@@ -38,30 +36,8 @@
             <version>1.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>net.sf.atmodem4j</groupId>
-            <artifactId>spsw-nativelibs-bundle</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>net.sf.atmodem4j</groupId>
-                    <artifactId>libspsw-linux-amd64</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>net.sf.atmodem4j</groupId>
-                    <artifactId>libspsw-linux-armhf</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>net.sf.atmodem4j</groupId>
-                    <artifactId>libspsw-linux-i386</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>net.sf.atmodem4j</groupId>
-                    <artifactId>spsw-windows-x86</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>net.sf.atmodem4j</groupId>
-                    <artifactId>spsw-windows-x86_64</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>de.ibapl.spsw</groupId>
+            <artifactId>de.ibapl.spsw.provider</artifactId>
         </dependency>
     </dependencies>
     
