Commit accumulated changes + SPSW 2.0.0-SNAPSHOT

--- a/mbus4j-master-ui/pom.xml
+++ b/mbus4j-master-ui/pom.xml
@@ -37,7 +37,8 @@
         </dependency>
         <dependency>
             <groupId>de.ibapl.spsw</groupId>
-            <artifactId>de.ibapl.spsw.provider</artifactId>
+            <artifactId>de.ibapl.spsw.jniprovider</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
     
