--- a/mbus4j-master/pom.xml
+++ b/mbus4j-master/pom.xml
@@ -35,8 +35,7 @@
         </dependency>
         <dependency>
             <groupId>de.ibapl.spsw</groupId>
-            <artifactId>de.ibapl.spsw.provider</artifactId>
-            <scope>test</scope>
+            <artifactId>de.ibapl.spsw.api</artifactId>
         </dependency>
     </dependencies>
 
