--- a/pom.xml
+++ b/pom.xml
@@ -97,12 +97,13 @@
             <dependency>
                 <groupId>de.ibapl.spsw</groupId>
                 <artifactId>de.ibapl.spsw.api</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <version>2.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>de.ibapl.spsw</groupId>
-                <artifactId>de.ibapl.spsw.provider</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <artifactId>de.ibapl.spsw.jniprovider</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+                <scope>runtime</scope>
             </dependency>
             
             <dependency>
