--- a/mbus4j-master-ui/pom.xml
+++ b/mbus4j-master-ui/pom.xml
@@ -13,8 +13,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
@@ -37,32 +41,32 @@
         </dependency>
         <dependency>
             <groupId>de.ibapl.spsw</groupId>
-            <artifactId>de.ibapl.spsw.jniprovider</artifactId>
+            <artifactId>de.ibapl.spsw.jnhwprovider</artifactId>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
-    
-<build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>net.sf.mbus4j.master.console.ConsoleApp</mainClass>
-            </manifest>
-          </archive>
-          <executions>
-          <execution>
-            <id>make-assembly</id> <!-- this is used for inheritance merges -->
-            <phase>package</phase> <!-- bind to the packaging phase -->
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-          </executions>
-        </configuration>
-      </plugin>
-    </plugins>
-</build>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>net.sf.mbus4j.master.console.ConsoleApp</mainClass>
+                        </manifest>
+                    </archive>
+                    <executions>
+                        <execution>
+                            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                            <phase>package</phase> <!-- bind to the packaging phase -->
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
